--- a/event.html
+++ b/event.html
@@ -75,16 +75,68 @@
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <!-- 2 columns per row -->
 
+        <!--COMPUTER SCIENCE EVENTS-->
+        <div class="col">
+          <div class="p-3 container-fluid">
+            <div class="dropdown">
+              <span class="para blue-p"
+                >BugBundy <br /><br />
+                <img src="cs.png" style="width: 15rem; height: 15rem; opacity: 80%" />
+                <br /><br />
+              </span>
+              <div class="dropdown-text para1 blue-m">
+                <h6>The Ultimate Debugging Challenge</h6>
+                <br />
+                <p>
+                  BugBundy is a fast-paced competition where participants race against time to spot and
+                  fix code bugs. Test your skills, showcase your expertise, and compete for glory in this
+                  thrilling tech showdown!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--MATHEMATICS APTITUDE-->
+        <div class="col">
+          <div class="p-3 container-fluid">
+            <div class="dropdown">
+              <span class="para green-p"
+                >MathWiz <br /><br />
+                <img src="maths.png" style="width: 15rem; height: 15rem; opacity: 80%" />
+                <br /><br />
+              </span>
+              <div class="dropdown-text para1 green-p">
+                <h6>Mathematics Aptitude Challenge</h6>
+                <br />
+                <p>
+                  MathWiz is a stimulating competition that tests your logical thinking and
+                  problem-solving abilities. Sharpen your mind, tackle intriguing math problems, and
+                  prove your aptitude in this exciting challenge!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- MATHEMATICCS POSTER DESCRIPTION-->
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
               <span class="para blue-p">
-                Mathematics Posters <br /><br />
-                <img src="maths.png" style="width: 15rem; height: 15rem; opacity: 80%" />
+                MathVision <br /><br />
+                <img src="mathppt.png" style="width: 15rem; height: 15rem; opacity: 80%" />
                 <br />
               </span>
               <div class="dropdown-text para1 blue-m">
+                <h5><b>Mathematics Presentation Competition </b></h5>
+                <br />
+                <p>
+                  MathVision is a platform to showcase your analytical skills and creativity through
+                  captivating mathematics presentations. Dive into concepts, present innovative ideas,
+                  and inspire others with the beauty of math!
+                </p>
+                <br />
                 <h5><u>TOPICS</u></h5>
                 <br />
                 <ol style="text-align: left">
@@ -144,82 +196,40 @@
           <div class="p-3 container-fluid">
             <div class="dropdown">
               <span class="para purple-p"
-                >Electronics Poster <br />
+                >ElectroQuest <br />
                 <br />
                 <img src="electronics.png" style="width: 18rem; height: 13rem; opacity: 80%" />
                 <br /><br />
               </span>
               <div class="dropdown-text para1 purple-p">
-                <h5><u>TOPICS</u></h5>
+                <h5><b>Poster and Project Competition</b></h5>
+                <br />
+                <p>
+                  ElectroQuest invites budding innovators to showcase their creativity and technical
+                  skills through exciting poster presentations and project demonstrations. Bring your
+                  ideas to life and inspire others in this electrifying competition!
+                </p>
+                <br />
+                <h6><u>TOPICS</u></h6>
                 <br />
                 <ol style="text-align: left">
                   <li>
-                    <h6>
-                      <b
-                        >Advances in semiconductor technology : From Silicon to Gallium Nitride and
-                        willow</b
-                      >
-                    </h6>
+                    <b> Advances in semiconductor technology :</b> From Silicon to Gallium Nitride and
+                    willow
                   </li>
                   <br />
 
-                  <li>
-                    <h6><b>Edge AI : Bringing intelligence to device level </b></h6>
-                  </li>
+                  <li><b>Edge AI :</b> Bringing intelligence to device level</li>
                   <br />
 
-                  <li>
-                    <h6><b>Implantable Electronics : The future of health care </b></h6>
-                  </li>
+                  <li><b>Implantable Electronics :</b> The future of health care</li>
                   <br />
 
-                  <li>
-                    <h6><b>Cyber Security in IoT devices </b></h6>
-                  </li>
+                  <li><b>Cyber Security in IoT devices</b></li>
                   <br />
 
-                  <li>
-                    <h6><b>Career in Electronics : Inspiring the next generation</b></h6>
-                  </li>
+                  <li><b>Career in Electronics :</b> Inspiring the next generation</li>
                   <br />
-                </ol>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--COMPUTER SCIENCE EVENTS-->
-        <div class="col">
-          <div class="p-3 container-fluid">
-            <div class="dropdown">
-              <span class="para green-p"
-                >Computer Science Events
-                <br />
-                <img src="cs.png" style="width: 17rem; height: 17rem; opacity: 80%" />
-                <br /><br />
-              </span>
-              <div class="dropdown-text para1 green-p">
-                <ol style="text-align: left">
-                  <li>
-                    <h6>Bug Bundy Content</h6>
-                    <ul type="none">
-                      <li>
-                        Participants are challenged to identify and resolve bugs and errors with
-                        precision and skill.
-                      </li>
-                    </ul>
-                  </li>
-                  <br />
-
-                  <li>
-                    <h6>Code Golf</h6>
-                    <ul type="none">
-                      <li>
-                        Write the shortest and most efficient code possible, focusing on minimizing the
-                        number of characters or lines while maintaining functionality and accuracy
-                      </li>
-                    </ul>
-                  </li>
                 </ol>
               </div>
             </div>
@@ -231,22 +241,22 @@
           <div class="p-3 container-fluid">
             <div class="dropdown">
               <span class="para orange-p">
-                Statistics Posters <br /><br />
+                StatSpeak <br /><br />
                 <img src="stats1.png" style="width: 19rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
               <div class="dropdown-text para1 orange-p">
-                <h6>Role of Artificial Intelligence in data analytics</h6>
+                <h6>Statistics Presentation Competition</h6>
                 <br />
                 <p>
-                  AI revolutionizes data analytics by automating data processing, recognizing patterns,
-                  and providing predictive and prescriptive insights. It enhances decision-making through
-                  real-time analysis, anomaly detection, and personalized recommendations. AI also
-                  processes unstructured data, such as text and visuals, making analytics more versatile.
-                  Its scalability allows handling vast datasets efficiently, enabling businesses to
-                  innovate. Challenges include ensuring data quality, addressing bias, and making
-                  AI-driven insights interpretable
+                  StatSpeak provides a platform to explore and present insightful statistical concepts
+                  and analyses. Showcase your data-driven ideas, share compelling stories, and inspire
+                  with the power of statistics!
                 </p>
+                <br />
+                <h6><u>TOPIC</u></h6>
+                <br />
+                Role of AI in Data Analytics.
               </div>
             </div>
           </div>
@@ -257,15 +267,33 @@
           <div class="p-3 container-fluid">
             <div class="dropdown">
               <span class="para purple-p"
-                >Non Technical Games <br /><br />
+                >FunFusion <br /><br />
                 <img src="chess.png" style="width: 18rem; height: 18rem; opacity: 80%" />
                 <br />
               </span>
               <div class="dropdown-text para1 purple-p">
-                <h4>Chess</h4>
-                <h4>Sudoko</h4>
-                <h4>Rubix cube</h4>
-                <h4>Stand Up Comedy</h4>
+                <h6>Non-Technical Events</h6>
+                <br />
+                <p>
+                  Unleash your creativity and have fun with our exciting lineup of non-technical events!
+                  From cracking Sudoku puzzles and solving Rubik's cubes to creating engaging reels and
+                  delivering hilarious stand-up comedy, there's something for everyone to enjoy and
+                  showcase their unique talents. Join us for a day full of excitement and laughter!
+                </p>
+
+                <ul type="none">
+                  <b>
+                    <li>Chess</li>
+
+                    <li>Sudoko</li>
+
+                    <li>Rubix cube</li>
+
+                    <li>Reel Making</li>
+
+                    <li>Stand Up Comedy</li>
+                  </b>
+                </ul>
               </div>
             </div>
           </div>
