--- a/event.html
+++ b/event.html
@@ -41,7 +41,7 @@
       >
         <!-- Brand Name -->
         <li>
-          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2024 </a>
+          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2025 </a>
         </li>
 
         <!-- Navigation Links -->
@@ -151,7 +151,7 @@
                   </li>
                   <br />
                   <li>
-                    <h6>Linear Algebra in Computer Graphics and AI</h6>
+                    <h6><b>Linear Algebra in Computer Graphics and AI</b></h6>
                     <ul type="none">
                       <li>
                         Applications of matrices, vectors, and transformations in machine learning and 3D
@@ -161,7 +161,7 @@
                   </li>
                   <br />
                   <li>
-                    <h6>Chaos Theory: The Butterfly Effect in Mathematics</h6>
+                    <h6><b>Chaos Theory: The Butterfly Effect in Mathematics</b></h6>
                     <ul type="none">
                       <li>
                         Understanding sensitive dependence on initial conditions and its role in
@@ -171,14 +171,14 @@
                   </li>
                   <br />
                   <li>
-                    <h6>Computational Geometry: Algorithms Behind Spatial Data</h6>
+                    <h6><b>Computational Geometry: Algorithms Behind Spatial Data</b></h6>
                     <ul type="none">
                       <li>Applications of geometric algorithms in robotics, GIS, and computer vision</li>
                     </ul>
                   </li>
                   <br />
                   <li>
-                    <h6>Boolean Algebra: The Foundation of Logic Circuits</h6>
+                    <h6><b>Boolean Algebra: The Foundation of Logic Circuits</b></h6>
                     <ul type="none">
                       <li>
                         Visualizing truth tables, Karnaugh maps, and their role in digital systems.
@@ -240,12 +240,12 @@
         <div class="col">
           <div class="p-3 container-fluid">
             <div class="dropdown">
-              <span class="para orange-p">
+              <span class="para green-p">
                 StatSpeak <br /><br />
                 <img src="stats1.png" style="width: 19rem; height: 15rem; opacity: 80%" />
                 <br /><br />
               </span>
-              <div class="dropdown-text para1 orange-p">
+              <div class="dropdown-text para1 green-p">
                 <h6>Statistics Presentation Competition</h6>
                 <br />
                 <p>
@@ -306,21 +306,21 @@
         <div>
           <p style="margin: 0; font-size: 1.2rem; font-weight: bold">Contact Us:</p>
           <p style="margin: 5px 0; font-size: 1rem">
-            Email:
+            Phone:
             <a
-              href="mailto:teklogica25@stmira.edu"
+              href="tel:+919975582353"
               class="text-light"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='white'"
-              >teklogica25@stmira.edu</a
+              >+91 9975582353</a
             >
-            | Phone:
+            |
             <a
-              href="tel:+919028808800"
+              href="tel:+918484842734"
               class="text-light"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='white'"
-              >+91 9028808800</a
+              >+91 8484842734</a
             >
           </p>
         </div>
