--- a/time.html
+++ b/time.html
@@ -41,7 +41,7 @@
       >
         <!-- Brand Name -->
         <li>
-          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2024 </a>
+          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2025 </a>
         </li>
 
         <!-- Navigation Links -->
@@ -150,21 +150,21 @@
         <div>
           <p style="margin: 0; font-size: 1.2rem; font-weight: bold">Contact Us:</p>
           <p style="margin: 5px 0; font-size: 1rem">
-            Email:
+            Phone:
             <a
-              href="mailto:teklogica25@stmira.edu"
+              href="tel:+919975582353"
               class="text-light"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='white'"
-              >teklogica25@stmira.edu</a
+              >+91 9975582353</a
             >
-            | Phone:
+            |
             <a
-              href="tel:+919028808800"
+              href="tel:+918484842734"
               class="text-light"
               onmouseover="this.style.color='#FF69B4'"
               onmouseout="this.style.color='white'"
-              >+91 9028808800</a
+              >+91 8484842734</a
             >
           </p>
         </div>
