--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       href="https://fonts.googleapis.com/css2?family=Garamond:wght@400;700&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXGPMJKVLX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZXGPMJKVLX');
+    </script>
   </head>
   <body>
     <canvas id="sparkleCanvas"></canvas>
@@ -118,10 +130,21 @@
               </b></i
             >
           </p>
-
-          <p class=""></p>
-
-          <div></div>
+          <br />
+          <div class="container-c my-2 text-center mx-auto">
+            <h5 class="blue-p"><u>VENUE DIRECTIONS</u></h5>
+            <br />
+            <p class="para1-b">6, Koregaon Road, Near Hotel Blue Diamond, Pune, Maharashtra 411001</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.874593028313!2d73.8858769!3d18.534568399999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c0ffa9356657%3A0xa8a998fd05b52d95!2sSt.%20Mira&#39;s%20College%20For%20Girls!5e0!3m2!1sen!2sin!4v1735450250416!5m2!1sen!2sin"
+              width="100%"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </div>
     </div>
