--- a/time.html
+++ b/time.html
@@ -116,7 +116,7 @@
             <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
           </tr>
           <tr>
-            <td>Mathematics Poster</td>
+            <td>Mathematics Presentation</td>
             <td>11:00am - 1:00pm</td>
             <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
           </tr>
@@ -148,7 +148,7 @@
         </table>
         <br />
         <p class="para1-b">
-          Kindly Note: The refreshment will be served from 11:00 am to 2:00 pm in Room No. 305 (3<sup
+          Kindly Note: The refreshments will be served from 11:00 am to 2:00 pm in Room No. 305 (3<sup
             >rd</sup
           >
           Floor). Participants will be given 1 food coupon even after participating in one or more events
