--- a/index.html
+++ b/index.html
@@ -87,19 +87,25 @@
     <div>
       <div class="container text-center my-3">
         <div class="col-lg-10 col-md-8 mx-auto">
-          <div class="title">St. Mira's College For Girls</div>
-          <div class="text-a" style="font-size: small">
-            (Autonomous - Affiliated to Savitribai Phule Pune University) <br />
-            Re-Accredited by NAAC 'A' Grade (Third Cycle)
+          <div class="d-flex align-items-center justify-content-center">
+            <!-- Logo on the left -->
+            <div class="me-3">
+              <img
+                src="logo.jpg"
+                alt="St. Mira's College For Girls logo"
+                style="width: 5rem; height: 5rem; opacity: 80%"
+              />
+            </div>
+            <!-- Title and Text -->
+            <div>
+              <div class="title">St. Mira's College For Girls</div>
+              <div class="text-a" style="font-size: small">
+                (Autonomous - Affiliated to Savitribai Phule Pune University) <br />
+                Re-Accredited by NAAC 'A' Grade (Third Cycle)
+              </div>
+            </div>
           </div>
-          <div>
-            <img
-              src="logo.jpg"
-              alt="St. Mira's College For Girls logo"
-              style="width: 5rem; height: 5rem; opacity: 80%"
-            />
-          </div>
-          <br />
+          <br /><br />
           <div class="title-secondary">Computer Science Department Presents</div>
           <div class="title-main my-2">TEKLOGICA 2024-2025 <br /></div>
           <div
