--- a/index.html
+++ b/index.html
@@ -93,17 +93,18 @@
               <img
                 src="logo.jpg"
                 alt="St. Mira's College For Girls logo"
-                style="width: 5rem; height: 5rem; opacity: 80%"
+                style="opacity: 80%"
+                class="logo-size rounded-img"
               />
             </div>
             <!-- Title and Text -->
             <div>
               <div class="title">St. Mira's College For Girls</div>
-              <div class="text-a" style="font-size: small">
-                (Autonomous - Affiliated to Savitribai Phule Pune University) <br />
-                Re-Accredited by NAAC 'A' Grade (Third Cycle)
-              </div>
             </div>
+          </div>
+          <div class="text-a" style="font-size: smaller">
+            (Autonomous - Affiliated to Savitribai Phule Pune University) <br />
+            Re-Accredited by NAAC 'A' Grade (Third Cycle)
           </div>
           <br /><br />
           <div class="title-secondary">Computer Science Department Presents</div>
