--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       >
         <!-- Brand Name -->
         <li>
-          <a href="#" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2025 </a>
+          <a href="index.html" class="title-secondary" style="text-decoration: none"> TEKLOGICA 2025 </a>
         </li>
 
         <!-- Navigation Links -->
@@ -99,7 +99,7 @@
             </div>
             <!-- Title and Text -->
             <div>
-              <div class="title">St. Mira's College For Girls</div>
+              <div class="title" style="font-size: auto">St. Mira's College For Girls</div>
             </div>
           </div>
           <div class="text-a" style="font-size: smaller">
