--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <!-- Title and Text -->
             <div>
-              <div class="title" style="font-size: auto">St. Mira's College For Girls</div>
+              <div class="title">St. Mira's College For Girls</div>
             </div>
           </div>
           <div class="text-a" style="font-size: smaller">
@@ -122,8 +122,8 @@
             >
           </div>
           <br />
-          <br />
-          <img src="teck.png" style="width: 20rem; height: 20rem; opacity: 80%" /><br /><br />
+
+          <img src="vec.png" style="width: 23rem; height: 23rem; opacity: 90%" /><br /><br />
           <p class="para1-b" id="first">
             <i
               ><b>
