--- a/time.html
+++ b/time.html
@@ -114,12 +114,12 @@
           <tr>
             <td>Computer Science Events</td>
             <td>10:00am - 11:00am</td>
-            <td>Computer Science Lab (3<sup>rd</sup> Floor)</td>
+            <td>Computer Science Lab (3<sup>rd</sup> Floor, 306)</td>
           </tr>
           <tr>
-            <td>Mathematics Presentation</td>
+            <td>Mathematics Posters</td>
             <td>11:00am - 1:00pm</td>
-            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor)</td>
+            <td>Mathematics / Statistics Lab (3<sup>rd</sup> Floor, 312)</td>
           </tr>
           <tr>
             <td>Statistics Presentation</td>
